Developer/src/objects/ProgramSearchResultDTO__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Award__c</fullName>
        <label>Award#</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CouponImage__c</fullName>
        <formula>&quot;1&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>イメージ</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExpireDate__c</fullName>
        <label>有効期限日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OfferLine__c</fullName>
        <label>オファーライン</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrintStartDate__c</fullName>
        <label>発券開始日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PrintStopDate__c</fullName>
        <label>発券終了日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SpecialFlg__c</fullName>
        <label>特別企画</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SpecialProgram__c</fullName>
        <label>企画名</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>検索結果</label>
    <nameField>
        <label>検索結果名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>